# revise

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile.toml  README.md  cliff.toml  deny.toml  revise.toml  rustfmt.toml  typos.toml
.github/workflows/: build.yml  cd.yml  ci.yml  integration.yml
src/: ai.rs  cli.rs  commit.rs  config.rs  error.rs  git.rs  hook.rs  inquire.rs  lib.rs  main.rs  revise.rs  utils.rs
src/ai/: gemini.rs
src/config/: constant.rs  mod.rs
src/git/: add.rs  cmit.rs  diff.rs  repo.rs
src/revise/: args.rs  commit.rs  mod.rs  prompts.rs  revise.rs  status.rs  template.rs
src/revise/prompts/: ai_generater.rs  ai_translator.rs  commit_ai.rs  commit_body.rs  commit_breaking.rs  commit_confirm.rs  commit_edit.rs  commit_issue.rs  commit_scope.rs  commit_subject.rs  commit_translate.rs  commit_type.rs
src/utils/: ai.rs  git.rs  mod.rs
src/utils/ai/: gemini.rs
src/utils/git/: cmit.rs  conf.rs  diff.rs  repo.rs
