[package]
name = "revise"
version = "0.1.0"
edition = "2021"

[dependencies]
inquire = { version = "0.7.0", features = ["editor"] }
dirs = "5.0.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
toml = "0.8"
exitcode = "1.1.2"
human-panic = "1.2.3"
colored = "2.1.0"
tempfile = "3.10.1"
