[package]
name = "revise"
version = "0.1.0"
edition = "2021"
authors = ["Jasper Zhang <vainjoker@tuta.io>"]
description = "A command line utility for better commit"
keywords = ["git","termiaznl","commit"]
repository = "https://github.com/vainjoker/revise"
homepage = "https://github.com/vainjoker/revise"
readme = "README.md"
license = "GPL-3.0"
exclude = [
  "assets/*",
  ".github",
  "Makefile.toml",
  "CHANGELOG.md",
  "*.log",
  "tags",
]

[dependencies]
inquire = { version = "0.7.0", features = ["editor"] }
dirs = "5.0.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
toml = "0.8"
exitcode = "1.1.2"
human-panic = "1.2.3"
colored = "2.1.0"

[lints.rust]
unsafe_code = "forbid"
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
wildcard_imports = "allow"
# nursery or restricted
as_underscore = "warn"
deref_by_slicing = "warn"
else_if_without_else = "warn"
empty_line_after_doc_comments = "warn"
equatable_if_let = "warn"
fn_to_numeric_cast_any = "warn"
format_push_string = "warn"
map_err_ignore = "warn"
missing_const_for_fn = "warn"
mixed_read_write_in_expression = "warn"
mod_module_files = "warn"
needless_raw_strings = "warn"
redundant_type_annotations = "warn"
rest_pat_in_fully_bound_structs = "warn"
string_lit_chars_any = "warn"
string_to_string = "warn"
use_self = "warn"

[profile.release]
strip = true 
