[package]
name = "git-revise"
version = "0.1.5"
edition = "2021"
authors = ["Jasper Zhang <vainjoker@tuta.io>"]
description = "A command line utility for better commit"
keywords = ["git","termiaznl","commit"]
repository = "https://github.com/vainjoker/revise"
homepage = "https://github.com/vainjoker/revise"
readme = "README.md"
license = "GPL-3.0"
exclude = [
  "assets/*",
  ".github",
  "Makefile.toml",
  "CHANGELOG.md",
  "*.log",
  "tags",
]

[dependencies]
dotenvy = "0.15.0"
realme = "0.1.2"
inquire = { version = "0.7.0", features = ["editor"] }
dirs = "5.0.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.37", features = ["full"] }
serde_json = { version = "1.0" }
reqwest = {version = "0.12.5", features= ["json"]}
anyhow = "1.0"
exitcode = "1.1.2"
human-panic = "2.0"
colored = "2.1.0"
git2 = { version = "0.19.0", features = ["vendored-openssl"] }
clap = { version = "4.5.8", features = ["derive"] }
tera = { version = "1", default-features = false }

[lints.rust]
unsafe_code = "forbid"
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
wildcard_imports = "allow"
module_inception = "allow"
# nursery or restricted
as_underscore = "warn"
deref_by_slicing = "warn"
else_if_without_else = "warn"
empty_line_after_doc_comments = "warn"
equatable_if_let = "warn"
fn_to_numeric_cast_any = "warn"
format_push_string = "warn"
map_err_ignore = "warn"
missing_const_for_fn = "warn"
mixed_read_write_in_expression = "warn"
needless_raw_strings = "warn"
redundant_type_annotations = "warn"
rest_pat_in_fully_bound_structs = "warn"
string_lit_chars_any = "warn"
string_to_string = "warn"
use_self = "warn"

[profile.release]
strip = true 

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
[workspace.metadata.dist]
allow-dirty = ["ci", "msi"]
cargo-dist-version = "0.12.0"
ci = ["github"]
installers = ["shell"]
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
pr-run-mode = "plan"
install-updater = false
